--- a/ybk/templates/user.html
+++ b/ybk/templates/user.html
@@ -3,6 +3,14 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expended="true">{{ current_user.username }} <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
+                  {% if current_user.is_admin %}
+                    {% if 'admin' in request.path %}
+                    <li><a href="{{ url_for('frontend.index') }}">前台</a></li>
+                    {% else %}
+                    <li><a href="{{ url_for('admin.index') }}">后台</a></li>
+                    {% endif %}
+
+                  {% endif %}
                   <li><a href="{{ url_for('user.logout', next=request.path) }}">登出</a></li>
                 </ul>
               </li> 
