--- a/ybk/templates/frontend/index.html
+++ b/ybk/templates/frontend/index.html
@@ -2,7 +2,7 @@
 
 {% block main %}
           <div class="jumbotron">
-            <h1>邮币卡全网通</h1>
+            <h1>邮币卡369</h1>
             <p>
               整合国内全部邮币卡交易所的申购/中签信息
               &nbsp; | &nbsp; 智能分析中签率、中签策略、潜在收益</p>
