--- a/ybk/templates/user/position.html
+++ b/ybk/templates/user/position.html
@@ -18,24 +18,25 @@
          <b>已卖出藏品:</b> {{ num_sold or 0 }}种
         </div>
         <div class="col-md-4">
-         <b>平均涨幅:</b> {{ average_increase or 0 | percentage }}
+         <b>平均涨幅:</b> {{ (average_increase or 0) | percentage('.1') }}
         </div>
         <div class="col-md-4">
-         <b>未实现收益(浮盈):</b> {{ unrealized_profit or 0 }}元
+         <b>未实现收益(浮盈):</b> {{ (unrealized_profit or 0) | strformat('{:.1f}') }}元
         </div>
         <div class="col-md-4">
-         <b>已实现收益:</b> {{ realized_profit or 0 }}元
+         <b>已实现收益:</b> {{ (realized_profit or 0) | strformat('{:.1f}') }}元
         </div>
         <table class="table">
           <thead>
             <th>交易所</th>
             <th>藏品名称</th>
             <th>藏品代码</th>
-            <th>买入均价</th>
-            <th>买入数量</th>
-            <th>现价</th>
-            <th>涨跌幅</th>
-            <th>浮盈</th>
+            <th class="text-right">买价</th>
+            <th class="text-right">买量</th>
+            <th class="text-right">现价</th>
+            <th class="text-right">今涨</th>
+            <th class="text-right">总涨</th>
+            <th class="text-right">浮盈</th>
             <th>操作</th>
           </thead>
           <tbody>
@@ -44,14 +45,15 @@
               <td>{{ p.exchange }}</td>
               <td>{{ p.name }}</td>
               <td>{{ p.symbol }}</td>
-              <td>{{ p.avg_buy_price | strformat('{:4.2f}') }}</td>
-              <td>{{ p.quantity }}</td>
-              <td>{{ p.latest_price | strformat('{:4.2f}') }}</td>
-              <td>{{ p.increase | percentage }}</td>
-              <td>{{ p.unrealized_profit | strformat('{:4.2f}') }}</td>
+              <td class="text-right">{{ p.avg_buy_price | strformat('{:4.2f}') }}</td>
+              <td class="text-right">{{ p.quantity }}</td>
+              <td class="text-right">{{ p.latest_price | strformat('{:4.2f}') }}</td>
+              <td class="text-right">{{ (p.increase or 0) | percentage('.1') }}</td>
+              <td class="text-right">{{ p.total_increase | percentage('.1') }}</td>
+              <td class="text-right">{{ p.unrealized_profit | strformat('{:4.1f}') }}</td>
               <td>
-                <button class="btn btn-sm" name="buy" data-exchange="{{ p.exchange }}" data-symbol="{{ p.symbol }}">买入</button>
-                <button class="btn btn-sm" name="sell" data-exchange="{{ p.exchange }}" data-symbol="{{ p.symbol }}">卖出</button>
+                <button class="btn btn-xs btn-default" name="buy" data-exchange="{{ p.exchange }}" data-symbol="{{ p.symbol }}" data-price="{{ p.latest_price }}">买入</button>
+                <button class="btn btn-xs btn-default" name="sell" data-exchange="{{ p.exchange }}" data-symbol="{{ p.symbol }}" data-price="{{ p.latest_price }}" data-quantity="{{ p.quantity }}">卖出</button>
               </td>
             </tr>
           {% endfor %}
@@ -74,21 +76,21 @@
             <br />
             <form class="form-horizontal">
               <div class="form-group">
-                <label for="operated-at" class="col-sm-4 control-label">买入日期</label>
+                <label for="buy-at" class="col-sm-4 control-label">买入日期</label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" id="operated-at" placeholder="买入日期">
+                  <input type="text" class="form-control" id="buy-at" placeholder="买入日期">
                 </div>
               </div>
               <div class="form-group">
-                <label for="exchange" class="col-sm-4 control-label">交易所</label>
+                <label for="buy-exchange" class="col-sm-4 control-label">交易所</label>
                 <div class="col-sm-8">
-                  <select class="form-control" id="exchange" placeholder="交易所"></select>
+                  <select class="form-control" id="buy-exchange" placeholder="交易所"></select>
                 </div>
               </div>
               <div class="form-group">
-                <label for="symbol" class="col-sm-4 control-label">藏品代码</label>
+                <label for="buy-symbol" class="col-sm-4 control-label">藏品代码</label>
                 <div class="col-sm-8">
-                  <select class="form-control" id="symbol" placeholder="藏品代码"></select>
+                  <select class="form-control" id="buy-symbol" placeholder="藏品代码"></select>
                 </div>
               </div>
               <div class="form-group">
@@ -112,11 +114,73 @@
           </div>
           <div role="tabpanel" class="tab-pane" id="sell">
             <br />
-            卖出操作施工中...
+            <form class="form-horizontal">
+              <div class="form-group">
+                <label for="sell-at" class="col-sm-4 control-label">卖出日期</label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" id="sell-at" placeholder="卖出日期">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="sell-exchange" class="col-sm-4 control-label">交易所</label>
+                <div class="col-sm-8">
+                  <select class="form-control" id="sell-exchange" placeholder="交易所"></select>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="sell-symbol" class="col-sm-4 control-label">藏品代码</label>
+                <div class="col-sm-8">
+                  <select class="form-control" id="sell-symbol" placeholder="藏品代码"></select>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="sell-price" class="col-sm-4 control-label">卖出价</label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" id="sell-price" placeholder="卖出价">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="sell-quantity" class="col-sm-4 control-label">卖出数量</label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" id="sell-quantity" placeholder="卖出数量">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-4 col-sm-8">
+                  <button type="submit" name="add-sell" class="btn btn-default">+ 添加</button>
+                </div>
+              </div>
+            </form>
           </div>
           <div role="tabpanel" class="tab-pane" id="record">
-            <br />
-            交易记录施工中...
+            <h4>共有记录{{ total_transactions }}条</h4>
+            <table class="table table-condensed" style="zoom: 0.8;">
+              <thead>
+                <th>日期</th>
+                <th>操作</th>
+                <th>交易所</th>
+                <th>代码</th>
+                <th>价</th>
+                <th>量</th>
+                <th></th>
+              </thead>
+              <tbody>
+                {% for t in transactions %}
+                <tr>
+                  <td> {{ t.operated_at | bjdate }} </td>
+                  <td> {{ t.typecn }} </td>
+                  <td> {{ t.exchange }} </td>
+                  <td> {{ t.symbol }} </td>
+                  <td> {{ t.price }} </td>
+                  <td> {{ t.quantity }} </td>
+                  <td>
+                    <button class="btn btn-xs btn-default"
+                    name="delete" data-id="{{ t._id }}">&times;</button>
+                  </td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
@@ -131,40 +195,170 @@
 <script src="{{ url_for('static', filename='js/bootstrap-datepicker.zh-CN.min.js') }}"></script>
 <script>
 $(function() {
-  $('#operated-at').datepicker({
+  // forms
+  $('#buy-at').datepicker({
     format: "yyyymmdd",
     language: "zh-CN",
     autoclose: true
   });
-  $('#exchange').selectize({
-    options: {{ exchanges | safe }},
-  })
-  $('#symbol').selectize({
-    options: [],
-    create: false,
-    persist: false,
-    load: function(query, callback) {
-      var self = this;
-      if (!query.length) return callback();
+  $('#sell-at').datepicker({
+    format: "yyyymmdd",
+    language: "zh-CN",
+    autoclose: true
+  });
+
+  var select_exchange_buy, select_exchange_sell;
+  var $select_exchange_buy, $select_exchange_sell;
+  var select_symbol_buy, select_symbol_sell;
+  var $select_symbol_buy, $select_symbol_sell;
+
+  function load_symbols(value){
+    return function(callback){
       $.ajax({
         url: "{{ url_for('api.load_symbols') }}",
-        data: {query: query, exchange: $('#exchange').val()},
+        data: {exchange: value},
         type: 'GET',
         error: function() {
           callback();
         },
         success: function(data) {
-          self.clearOptions();
           callback(data.result);
         }
       })
     }
+  }
+  $select_exchange_buy = $('#buy-exchange').selectize({
+    options: {{ exchanges | safe }},
+    onChange: function(value) {
+      select_symbol_buy.clearOptions();
+      select_symbol_buy.load(load_symbols(value));
+    }
+  })
+
+  $select_symbol_buy = $('#buy-symbol').selectize({
+    options: [],
+    create: false,
+  })
+
+  $select_exchange_sell = $('#sell-exchange').selectize({
+    options: {{ exchanges | safe }},
+    onChange: function(value) {
+      select_symbol_sell.clearOptions();
+      select_symbol_sell.load(load_symbols(value));
+    }
+  })
+
+  $select_symbol_sell = $('#sell-symbol').selectize({
+    options: [],
+    create: false,
+  })
+
+  select_exchange_buy = $select_exchange_buy[0].selectize;
+  select_symbol_buy = $select_symbol_buy[0].selectize;
+  select_exchange_sell = $select_exchange_sell[0].selectize;
+  select_symbol_sell = $select_symbol_sell[0].selectize;
+
+  // buttons
+  function today_str() {
+    var today = new Date();
+    var dd = today.getDate();
+    var mm = today.getMonth() + 1; // January is 0!
+    var yyyy = today.getFullYear();
+    if (dd < 10) {
+        dd = '0' + dd
+    } 
+    if (mm < 10) {
+        mm = '0' + mm
+    } 
+    return '' + yyyy + mm + dd;
+  }
+  $('table').on('click', '[name=buy]', function(e) {
+    e.preventDefault();
+    var self = $(e.target);
+    self.blur();
+    $('a[aria-controls=buy]').tab('show');
+    $('#buy-at').val(today_str());
+    select_exchange_buy.setValue(self.data('exchange'));
+    var symbol = self.data('symbol');
+    setTimeout(function() {
+      select_symbol_buy.setValue(symbol);
+    }, 1000);
+    $('#buy-price').val(self.data('price'));
+    $('#buy-quantity').focus();
+  });
+
+  $('table').on('click', '[name=sell]', function(e) {
+    e.preventDefault();
+    var self = $(e.target);
+    self.blur();
+    $('a[aria-controls=sell]').tab('show');
+    $('#sell-at').last().val(today_str());
+    select_exchange_sell.setValue(self.data('exchange'));
+    var symbol = self.data('symbol');
+    setTimeout(function() {
+      select_symbol_sell.setValue(symbol);
+    }, 1000);
+    $('#sell-price').val(self.data('price'));
+    $('#sell-quantity').attr('placeholder', 
+      '卖出数量(0-' + self.data('quantity') + ')')
+    $('#sell-quantity').focus();
+  });
+
+  $('table').on('click', '[name=delete]', function(e) {
+    e.preventDefault();
+    var self = $(e.target);
+    self.blur();
+    $.post(
+      "{{ url_for('user.transaction_delete') }}",
+      {id: self.data('id')},
+      function (data) {
+        if (data.status == 200) {
+          self.parent().parent().remove();
+          $('')
+        }
+      })
   })
 
   $('button[name=add-buy]').on('click', function(e) {
     e.preventDefault();
     e.target.blur();
+    var data = {
+      operated_at: $('#buy-at').first().val(),
+      exchange: $('#buy-exchange').first().val(),
+      symbol: $('#buy-symbol').first().val(),
+      price: $('#buy-price').first().val(),
+      quantity: $('#buy-quantity').first().val(),
+    }
+    $.post(
+      "{{ url_for('user.position_buy') }}",
+      data,
+      function (data){
+        if (data.status == 200){
+          location.href = location.href;
+        }
+      })
   })
+
+  $('button[name=add-sell]').on('click', function(e) {
+    e.preventDefault();
+    e.target.blur();
+    var data = {
+      operated_at: $('#sell-at').first().val(),
+      exchange: $('#sell-exchange').first().val(),
+      symbol: $('#sell-symbol').first().val(),
+      price: $('#sell-price').first().val(),
+      quantity: $('#sell-quantity').first().val(),
+    }
+    $.post(
+      "{{ url_for('user.position_sell') }}",
+      data,
+      function (data){
+        if (data.status == 200){
+          location.href = location.href;
+        }
+      })
+  })
+
 });
 </script>
 {% endblock %}
