--- a/ybk/templates/user.html
+++ b/ybk/templates/user.html
@@ -1,7 +1,7 @@
             <ul class="nav navbar-nav navbar-right">
               {% if current_user.is_authenticated() %}
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expended="true">{{ current_user.username }} <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expended="true">{{ current_user.username }}{% if current_user.is_admin() %}(管理员){% endif %}<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                   {% if current_user.is_admin() %}
                     {% if 'admin' in request.path %}
