--- a/ybk/templates/user/position.html
+++ b/ybk/templates/user/position.html
@@ -15,9 +15,6 @@
          <b>持有藏品:</b> {{ num_collections or 0 }}种
         </div>
         <div class="col-md-4">
-         <b>已卖出藏品:</b> {{ num_sold or 0 }}种
-        </div>
-        <div class="col-md-4">
          <b>平均涨幅:</b> {{ (average_increase or 0) | percentage('.1') }}
         </div>
         <div class="col-md-4">
@@ -25,6 +22,9 @@
         </div>
         <div class="col-md-4">
          <b>已实现收益:</b> {{ (realized_profit or 0) | strformat('{:.1f}') }}元
+        </div>
+        <div class="col-md-4">
+         <b>年化收益:</b> {{ (annual_profit or 0) | strformat('{:.1f}') }}元
         </div>
         <table class="table">
           <thead>
