--- a/ybk/static/css/ybk.css
+++ b/ybk/static/css/ybk.css
@@ -19,8 +19,10 @@
 table#position-list > tbody > tr > td,
 table#transaction-list > tbody > tr > td {
     padding: 3px !important;
-} {
-    padding: 3px !important;
+} 
+
+#record .bootstrap-table .fixed-table-pagination {
+    zoom: 0.7;    
 }
 
 /* frontend/announcement.html */
